Fixed layout of the blog post and list: * Decresased the line height of the title. * Set maximum width to 800 pixels (matches width of the images) * Aligned social media share buttons to left in single blog post page. * Small layout tweaks as well.

--- a/src/static/less/site.less
+++ b/src/static/less/site.less
@@ -1346,7 +1346,20 @@ https://developers.facebook.com/docs/reference/plugins/like-box/
 /* BLOG */
 
 .blog-post {
-  border-bottom: 1px solid #c2c2c2;
+  > .blog-content {
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  h1 {
+    line-height: 1;
+  }
+  .divider {
+    border-bottom: 1px solid #c2c2c2;
+  }
+  .byline {
+    padding-top: 40px;
+  }
 }
 
 .blog-content > p:first-of-type {
